setting up scatter comparison for spatial variation in residence time tuning

--- a/paper3/residence_time.ipynb
+++ b/paper3/residence_time.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,38 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mask_base = np.zeros((50,isize,jsize))\n",
-    "\n",
-    "# Select CAA region:\n",
-    "mask_CAA   = np.copy(mask_base)\n",
-    "mask_CAA[] = 1\n",
-    "\n",
-    "\n",
-    "# Select Canada Basin region:\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Select Baffin Bay region:\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Select Labrador Sea region:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -358,6 +327,58 @@
    ],
    "source": [
     "residence_time_2002 = calc_annual_residence_time('/data/brogalla/run_storage/Pb-new-ini2-spin1/', 2002)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculate the difference between the model residence time and the observed residence time in the upper 56 m:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'constants' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-9f982166a345>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mkadko_res_time_diff\u001b[0m     \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mempty\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkadko_res\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconstants\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbetas\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mkadko_res_time_diff\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m     \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnan\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mkadko_modelled_res_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mempty\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkadko_res\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconstants\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbetas\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mkadko_modelled_res_time\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnan\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mchen_res_time_diff\u001b[0m      \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mempty\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchen_res\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconstants\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbetas\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m  \u001b[0mchen_res_time_diff\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m      \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnan\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mchen_modelled_res_time\u001b[0m  \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mempty\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchen_res\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconstants\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbetas\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m  \u001b[0mchen_modelled_res_time\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m  \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnan\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'constants' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "kadko_res_time_diff     = np.empty((len(kadko_res),len(constants),len(betas))); kadko_res_time_diff[:]     = np.nan;\n",
+    "kadko_modelled_res_time = np.empty((len(kadko_res),len(constants),len(betas))); kadko_modelled_res_time[:] = np.nan;\n",
+    "chen_res_time_diff      = np.empty((len(chen_res),len(constants),len(betas)));  chen_res_time_diff[:]      = np.nan;\n",
+    "chen_modelled_res_time  = np.empty((len(chen_res),len(constants),len(betas)));  chen_modelled_res_time[:]  = np.nan;\n",
+    "        \n",
+    "# Difference be tween modeled and observed residence time at the stations:\n",
+    "# Kadko et al., 2019\n",
+    "for n, stn in enumerate(zip(kadko_ANHA12_i, kadko_ANHA12_j)):\n",
+    "    if (~np.isnan(stn[0])) & (~np.isnan(stn[1])):\n",
+    "        stni = int(stn[0]); stnj = int(stn[1]);\n",
+    "        kadko_modelled_res_time[n,ci,bi] = np.mean(res_time_yrs[0:18,stni,stnj],axis=0)                # mean over upper 50 m\n",
+    "        kadko_res_time_diff[n,ci,bi]     = kadko_res[n] - np.mean(res_time_yrs[0:18,stni,stnj],axis=0) # mean over upper 50 m\n",
+    "# Chen et al., 2012\n",
+    "\n",
+    "for n, stn in enumerate(zip(chen_ANHA12_i, chen_ANHA12_j)):\n",
+    "    if (~np.isnan(stn[0])) & (~np.isnan(stn[1])):\n",
+    "        stni = int(stn[0]); stnj = int(stn[1]);\n",
+    "        chen_modelled_res_time[n,ci,bi] = np.mean(res_time_yrs[0:18,stni,stnj],axis=0)               # mean over upper 50 m\n",
+    "        chen_res_time_diff[n,ci,bi]     = chen_res[n] - np.mean(res_time_yrs[0:18,stni,stnj],axis=0) # mean over upper 50 m\n",
+    "                \n",
+    "# Calculate mean difference and RMS between model residence time and observed residence time:\n",
+    "kadko_res_time_diff_mean = np.nanmean(kadko_res_time_diff, axis=0)\n",
+    "chen_res_time_diff_mean  = np.nanmean(chen_res_time_diff, axis=0)\n",
+    "kadko_res_time_rms       = np.sqrt(np.nansum(kadko_res_time_diff**2, axis=0)/np.count_nonzero(~np.isnan(kadko_res_time_diff)))\n",
+    "chen_res_time_rms        = np.sqrt(np.nansum(chen_res_time_diff**2, axis=0)/np.count_nonzero(~np.isnan(chen_res_time_diff)))"
    ]
   },
   {
@@ -413,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -453,6 +474,122 @@
    ],
    "source": [
     "plot_layer(residence_time_2002, 20, vmin=0, vmax=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Spatial variation in residence time\n",
+    "\n",
+    "Calculate as scatter plot, with correlation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(50, 1040, 640)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kadko_lats   = np.array([76.511, 79.997, 83.755, 87.520, 88.407, 89.987, 87.815, 85.135, 82.491, 80.369, 78.180, 77.503, 76.998, \\\n",
+    "                76.505, 73.506, 73.008])\n",
+    "kadko_lons   = np.array([-173.034, -174.962, 174.915, -179.809, -176.761, -89.25, -149.734, -150.063, -149.872, -149.855, -147.831, -148.009, -148.803, \\\n",
+    "               -149.515, -156.808, -158.729])\n",
+    "kadko_depths = np.array([56, 52, 52, 46, 20, 23, 45, 41, 47, 49, 40, 47, 40, 40, 46, 36])\n",
+    "kadko_res    = np.array([0.69, 0.76, 0.94, 0.24, 0.76, 0.27, 0.33, 0.71, 1.07, 0.65, 0.31, 0.36, 0.41, 0.28, 0.38, 0.18])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Since the observed Pb residence times in the Arctic Ocean are estimated based on the upper 60 m,\n",
+    "# we need to calculate the cumulative inventory of Pb in the model in the upper 56 m and the cumulative removal\n",
+    "\n",
+    "# Observations:\n",
+    "kadko_i, kadko_j  = mf.find_indeces_vector(kadko_lons, kadko_lats, mesh_lon[imin:imax,jmin:jmax], mesh_lat[imin:imax,jmin:jmax])\n",
+    "restime_obs       = kadko_res[~np.isnan(kadko_i)]\n",
+    "restime_obs_depth = kadko_depths[~np.isnan(kadko_i)]\n",
+    "\n",
+    "# Model:\n",
+    "restime_model = np.copy(residence_time_2002)\n",
+    "obs_i         = kadko_i[~np.isnan(kadko_i)]\n",
+    "obs_j         = kadko_j[~np.isnan(kadko_j)]\n",
+    "restime_model_match = [restime_model[:,int(obs_i[n]),int(obs_j[n])] for n in range(0,len(obs_i))]\n",
+    "# restime_model[0:19] # up to 56 m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not tuple",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-46-44443946a832>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrestime_model_match\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not tuple"
+     ]
+    }
+   ],
+   "source": [
+    "restime_model_match[0,:,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corr_mtx = np.corrcoef(restime_obs, restime_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Show Arctic Ocean observed residence times only if depth slice shown goes shallower than 60 m.\n",
+    "    if layer < 17:\n",
+    "        x_kadko, y_kadko = proj1(kadko_lons, kadko_lats)\n",
+    "        x_chen,  y_chen  = proj1(chen_lons, chen_lats)\n",
+    "        CB = proj1.scatter(x_kadko, y_kadko, c=kadko_res, s=20, edgecolor='w', linewidth=0.5, \\\n",
+    "                          zorder=5, vmin=vmin, vmax=vmax, cmap=cmocean.cm.thermal)\n",
+    "        proj1.scatter(x_chen, y_chen, c=chen_res, s=20, edgecolor='w', linewidth=0.5, \\\n",
+    "                     zorder=5, vmin=vmin, vmax=vmax, cmap=cmocean.cm.thermal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Vertical variation in residence time"
    ]
   },
   {
