using jp_pop as proxy for biogenic particles

--- a/paper3/forcing/scavenging-particle-fields.ipynb
+++ b/paper3/forcing/scavenging-particle-fields.ipynb
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "543140c1-a075-44a4-a0ad-726ea86f9293",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,8 @@
     "    # BLING:\n",
     "    file_EPM101 = f'/data/brogalla/ANHA4/BLING-EPM101/ANHA4-EPM101_y{year}m{month:02}.nc'\n",
     "    dset_bio    = xr.open_dataset(f'{file_EPM101}')\n",
-    "    biomass     = dset_bio['biomass_p'][:,:,:].values\n",
+    "#     biomass     = dset_bio['biomass_p'][:,:,:].values\n",
+    "    biomass     = dset_bio['jp_pop'][:,:,:].values\n",
     "    \n",
     "    # interpolate from ANHA4 to ANHA12 grid:\n",
     "    ANHA12_biomass = np.empty((50,isize,jsize))\n",
@@ -159,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "def5d73e-ab07-4039-b748-d9d9d33703cb",
    "metadata": {},
    "outputs": [],
@@ -182,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "13f1db7f-3cba-4cd6-8cbf-9eed4ec4dd5d",
    "metadata": {},
    "outputs": [],
@@ -194,7 +195,8 @@
     "    # BLING:\n",
     "    file_EPM101 = f'/data/brogalla/ANHA4/BLING-EPM101/ANHA4-EPM101_y{year}m{month:02}.nc'\n",
     "    dset_bio    = xr.open_dataset(f'{file_EPM101}')\n",
-    "    biomass     = dset_bio['biomass_p'][:,:,:].values\n",
+    "#     biomass     = dset_bio['biomass_p'][:,:,:].values\n",
+    "    biomass     = dset_bio['jp_pop'][:,:,:].values\n",
     "    \n",
     "    # interpolate from ANHA4 to ANHA12 grid:\n",
     "    ANHA12_biomass = np.empty((50,isize,jsize))\n",
@@ -223,13 +225,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_particle_fields(year, month, save=False, beta=np.nan):\n",
+    "def create_particle_fields(year, month, max_bio=np.nan, max_litho=np.nan, save=False, beta=np.nan):\n",
     "    ANHA12_biomass = load_bio(year, month)\n",
     "    ANHA12_litho   = load_litho(year, month)\n",
     "\n",
     "    # particles: normalize by maximum value within domain over the course of the full time series\n",
-    "    normalized_biogenic   = ANHA12_biomass/ 0.0007668 # np.amax(ANHA12_biomass)\n",
-    "    normalized_lithogenic = ANHA12_litho/1.83314e-07  # np.amax(ANHA12_litho)\n",
+    "    normalized_biogenic   = ANHA12_biomass / max_litho #0.0007668\n",
+    "    normalized_lithogenic = ANHA12_litho / max_bio #1.83314e-07 \n",
     "\n",
     "    # initialize arrays with some small value, then fill with normalized particle fields:\n",
     "    lithogenic_particles = np.ones(mesh_bathy.shape)*0.001\n",
@@ -241,18 +243,15 @@
     "        if np.isnan(beta):\n",
     "            print('need to define beta')\n",
     "        else:\n",
-    "            folder ='/ocean/brogalla/GEOTRACES/data/Pb-tuning-202210/new-interpolation-method/'\n",
-    "            betas  = [0.00, 0.01, 0.02, 0.03, 0.05, 0.15, 0.25, 0.50, 0.75, 0.95]\n",
-    "            save_file(f'{folder}particle1/', lithogenic_particles*betas[0], biogenic_particles*(1-betas[0]), year, month)\n",
-    "            save_file(f'{folder}particle2/', lithogenic_particles*betas[1], biogenic_particles*(1-betas[1]), year, month)\n",
-    "            save_file(f'{folder}particle3/', lithogenic_particles*betas[2], biogenic_particles*(1-betas[2]), year, month)\n",
-    "            save_file(f'{folder}particle4/', lithogenic_particles*betas[3], biogenic_particles*(1-betas[3]), year, month)\n",
-    "            save_file(f'{folder}particle5/', lithogenic_particles*betas[4], biogenic_particles*(1-betas[4]), year, month)\n",
-    "            save_file(f'{folder}particle6/', lithogenic_particles*betas[5], biogenic_particles*(1-betas[5]), year, month)\n",
-    "            save_file(f'{folder}particle7/', lithogenic_particles*betas[6], biogenic_particles*(1-betas[6]), year, month)\n",
-    "            save_file(f'{folder}particle8/', lithogenic_particles*betas[7], biogenic_particles*(1-betas[7]), year, month)\n",
-    "            save_file(f'{folder}particle9/', lithogenic_particles*betas[8], biogenic_particles*(1-betas[8]), year, month)\n",
-    "            save_file(f'{folder}particle10/', lithogenic_particles*betas[9], biogenic_particles*(1-betas[9]), year, month)\n",
+    "            folder ='/ocean/brogalla/GEOTRACES/data/Pb-tuning-202210/new-bio-proxy/'\n",
+    "            betas  = [0.01, 0.05, 0,15, 0.25, 0.5, 0.75, 0.95] #[0.00, 0.01, 0.02, 0.03, 0.05, 0.15, 0.25, 0.50, 0.75, 0.95]\n",
+    "            save_file(f'{folder}particle001/', lithogenic_particles*betas[0], biogenic_particles*(1-betas[0]), year, month)\n",
+    "            save_file(f'{folder}particle005/', lithogenic_particles*betas[1], biogenic_particles*(1-betas[1]), year, month)\n",
+    "            save_file(f'{folder}particle015/', lithogenic_particles*betas[2], biogenic_particles*(1-betas[2]), year, month)\n",
+    "            save_file(f'{folder}particle025/', lithogenic_particles*betas[3], biogenic_particles*(1-betas[3]), year, month)\n",
+    "            save_file(f'{folder}particle050/', lithogenic_particles*betas[4], biogenic_particles*(1-betas[4]), year, month)\n",
+    "            save_file(f'{folder}particle075/', lithogenic_particles*betas[5], biogenic_particles*(1-betas[5]), year, month)\n",
+    "            save_file(f'{folder}particle095/', lithogenic_particles*betas[6], biogenic_particles*(1-betas[6]), year, month)\n",
     "    \n",
     "    return lithogenic_particles, biogenic_particles"
    ]
@@ -267,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "54e9cb1a-44a6-4db1-a9c9-b05af5bfbbd0",
    "metadata": {},
    "outputs": [
@@ -289,11 +288,7 @@
       "2013\n",
       "2014\n",
       "2015\n",
-      "2016\n",
-      "2017\n",
-      "2018\n",
-      "2019\n",
-      "2020\n"
+      "2016\n"
      ]
     }
    ],
@@ -319,6 +314,16 @@
     "        max_litho_list[n] = max_litho\n",
     "        \n",
     "        n+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b9f907d-a62b-498c-a22c-5d0419109f45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(np.nanmax(max_bio_list), np.nanmax(max_litho_list))"
    ]
   },
   {
@@ -364,7 +369,7 @@
    "source": [
     "for month in range(1,2):\n",
     "    print(month)\n",
-    "    litho, bio = create_particle_fields(2016, month, save=True, beta=0.00)"
+    "    litho, bio = create_particle_fields(2016, month, max_bio=, max_litho=, save=True, beta=0.00)"
    ]
   },
   {
