parcel tracking notebooks setup

--- a/paper3/particle-tracking/identify-start-locations.ipynb
+++ b/paper3/particle-tracking/identify-start-locations.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "b6f3c616-54be-4ab0-87dc-58d35820e7b0",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "9af4396e-a318-4808-8e01-0859b87df8b7",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "id": "1979e62c-2af0-4b79-9d1f-12959e1f26ca",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "id": "887ae49f-fd75-4f4d-8578-664721b114f0",
    "metadata": {},
    "outputs": [],
@@ -95,14 +95,14 @@
     "        {'longitude' : ((\"x\"), lon),\n",
     "         'latitude'  : ((\"y\"), lat),\n",
     "         'depth'     : ((\"z\"), depth)}, \n",
-    "        coords = {\"z\": depths,\n",
+    "        coords = {\"z\": depth,\n",
     "                  \"y\": lat,\n",
     "                  \"x\": lon},\n",
     "    )\n",
-    "    file_write.pint.quantify({\"longitude\": \"degrees East\", \n",
-    "                              \"latitude\" : \"degrees North\",\n",
-    "                              \"depth\"    : \"m\"})\n",
-    "    file_write.pint.dequantify()\n",
+    "    file_write.longitude.attrs['units'] = 'degrees East'\n",
+    "    file_write.latitude.attrs['units']  = 'degrees West'\n",
+    "    file_write.depth.attrs['units']     = 'm'\n",
+    "\n",
     "    file_write.to_netcdf(f'{filepath}')\n",
     "    \n",
     "    return"
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "id": "79baefce-f8ab-49d3-8e10-27f29063c64e",
    "metadata": {},
    "outputs": [],
@@ -149,14 +149,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "id": "55087ccb-145e-4cbc-a88a-38e2fe71904a",
    "metadata": {},
    "outputs": [],
    "source": [
     "PC_lat   = np.linspace(74.3, 76, 20)\n",
     "PC_lon   = np.ones(PC_lat.shape)*-123 \n",
-    "PC_depth = np.arange(0,30,1)\n",
+    "PC_depth = np.copy(depths[0:30])\n",
     "\n",
     "# Release each parcel at a particular lon, lat, and depth:\n",
     "PC_lats   = np.tile(PC_lat, len(PC_depth))\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 12,
    "id": "9f583cfe-5007-4b3f-a586-3879e34aaf1c",
    "metadata": {},
    "outputs": [
@@ -200,13 +200,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "fa7ccea5-7fbb-488d-968e-bd630c007bc6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write release longitudes, latitudes, and depths to file:\n",
-    "save_file(lon, lat, depth, '/ocean/brogalla/GEOTRACES/parcels/Pb-chapter/.nc')"
+    "save_file(PC_lons, PC_lats, PC_depths, '/ocean/brogalla/GEOTRACES/parcels/Pb-chapter/western-PC-transect-parcels.nc')"
    ]
   },
   {
