messing around a bit more with the particle tracking. Need to update to most recent version of OP before using NestedFields

--- a/paper3/particle-tracking/identify-start-locations.ipynb
+++ b/paper3/particle-tracking/identify-start-locations.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "b6f3c616-54be-4ab0-87dc-58d35820e7b0",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "9af4396e-a318-4808-8e01-0859b87df8b7",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "1979e62c-2af0-4b79-9d1f-12959e1f26ca",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "887ae49f-fd75-4f4d-8578-664721b114f0",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "79baefce-f8ab-49d3-8e10-27f29063c64e",
    "metadata": {},
    "outputs": [],
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "id": "55087ccb-145e-4cbc-a88a-38e2fe71904a",
    "metadata": {},
    "outputs": [],
@@ -159,14 +159,32 @@
     "PC_depth = np.copy(depths[0:30])\n",
     "\n",
     "# Release each parcel at a particular lon, lat, and depth:\n",
-    "PC_lats   = np.tile(PC_lat, len(PC_depth))\n",
-    "PC_lons   = np.tile(PC_lon, len(PC_depth))\n",
-    "PC_depths = np.tile(PC_depth, len(PC_depth))\n",
+    "PC_lats   = np.repeat(PC_lat, len(PC_depth))\n",
+    "PC_lons   = np.repeat(PC_lon, len(PC_depth))\n",
+    "PC_depths = np.tile(PC_depth, len(PC_lat))\n",
     "\n",
     "# depths: release for each of the top 29 grid cells (just above the bottom of the main parts of Parry Channel)\n",
     "# time: released at the start of every month for years 2012-2016\n",
     "\n",
     "# possible questions: general change over transect, Barrow Sill change"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "b001474b-e5fe-4e8e-8bc3-41e1d2ef54d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(600,) (600,) (600,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(PC_lats.shape, PC_lons.shape, PC_depths.shape)"
    ]
   },
   {
@@ -200,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "id": "fa7ccea5-7fbb-488d-968e-bd630c007bc6",
    "metadata": {},
    "outputs": [],
