--- a/paper3/forcing/scavenging-particle-fields.ipynb
+++ b/paper3/forcing/scavenging-particle-fields.ipynb
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "543140c1-a075-44a4-a0ad-726ea86f9293",
    "metadata": {},
    "outputs": [],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "def5d73e-ab07-4039-b748-d9d9d33703cb",
    "metadata": {},
    "outputs": [],
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "13f1db7f-3cba-4cd6-8cbf-9eed4ec4dd5d",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "b2f9a584-e2fd-4528-9359-ff9f04e84730",
    "metadata": {},
    "outputs": [],
@@ -244,8 +244,8 @@
     "    normalized_lithogenic = ANHA12_litho / max_litho \n",
     "\n",
     "    # initialize arrays with some small value, then fill with normalized particle fields:\n",
-    "    lithogenic_particles = np.ones(mesh_bathy.shape)*0.001\n",
-    "    biogenic_particles   = np.ones(mesh_bathy.shape)*0.001\n",
+    "    lithogenic_particles = np.ones(mesh_bathy.shape)*0.01\n",
+    "    biogenic_particles   = np.ones(mesh_bathy.shape)*0.01\n",
     "    lithogenic_particles[:,imin:imax,jmin:jmax] = normalized_lithogenic\n",
     "    biogenic_particles[:,imin:imax,jmin:jmax]   = normalized_biogenic\n",
     "    \n",
@@ -254,14 +254,9 @@
     "            print('need to define beta')\n",
     "        else:\n",
     "            folder ='/ocean/brogalla/GEOTRACES/data/Pb-tuning-202210/new-bio-proxy/'\n",
-    "            betas  = [0.01, 0.05, 0,15, 0.25, 0.5, 0.75, 0.95] #[0.00, 0.01, 0.02, 0.03, 0.05, 0.15, 0.25, 0.50, 0.75, 0.95]\n",
-    "            save_file(f'{folder}particle001/', lithogenic_particles*betas[0], biogenic_particles*(1-betas[0]), year, month)\n",
-    "            save_file(f'{folder}particle005/', lithogenic_particles*betas[1], biogenic_particles*(1-betas[1]), year, month)\n",
-    "            save_file(f'{folder}particle015/', lithogenic_particles*betas[2], biogenic_particles*(1-betas[2]), year, month)\n",
-    "            save_file(f'{folder}particle025/', lithogenic_particles*betas[3], biogenic_particles*(1-betas[3]), year, month)\n",
-    "            save_file(f'{folder}particle050/', lithogenic_particles*betas[4], biogenic_particles*(1-betas[4]), year, month)\n",
-    "            save_file(f'{folder}particle075/', lithogenic_particles*betas[5], biogenic_particles*(1-betas[5]), year, month)\n",
-    "            save_file(f'{folder}particle095/', lithogenic_particles*betas[6], biogenic_particles*(1-betas[6]), year, month)\n",
+    "            betas  = [0.005, 0.01]\n",
+    "            save_file(f'{folder}particle0005/', lithogenic_particles*betas[0], biogenic_particles*(1-betas[0]), year, month)\n",
+    "            save_file(f'{folder}particle001/' , lithogenic_particles*betas[1], biogenic_particles*(1-betas[1]), year, month)\n",
     "    \n",
     "    return ANHA12_litho, ANHA12_biomass #lithogenic_particles, biogenic_particles"
    ]
@@ -376,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "434d3957-2aea-4238-8706-6d76e02646cd",
    "metadata": {},
    "outputs": [
@@ -384,14 +379,87 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12\n"
+      "2002 1\n",
+      "2002 2\n",
+      "2002 3\n",
+      "2002 4\n",
+      "2002 5\n",
+      "2002 6\n",
+      "2002 7\n",
+      "2002 8\n",
+      "2002 9\n",
+      "2002 10\n",
+      "2002 11\n",
+      "2002 12\n",
+      "2003 1\n",
+      "2003 2\n",
+      "2003 3\n",
+      "2003 4\n",
+      "2003 5\n",
+      "2003 6\n",
+      "2003 7\n",
+      "2003 8\n",
+      "2003 9\n",
+      "2003 10\n",
+      "2003 11\n",
+      "2003 12\n",
+      "2004 1\n",
+      "2004 2\n",
+      "2004 3\n",
+      "2004 4\n",
+      "2004 5\n",
+      "2004 6\n",
+      "2004 7\n",
+      "2004 8\n",
+      "2004 9\n",
+      "2004 10\n",
+      "2004 11\n",
+      "2004 12\n",
+      "2005 1\n",
+      "2005 2\n",
+      "2005 3\n",
+      "2005 4\n",
+      "2005 5\n",
+      "2005 6\n",
+      "2005 7\n",
+      "2005 8\n",
+      "2005 9\n",
+      "2005 10\n",
+      "2005 11\n",
+      "2005 12\n",
+      "2006 1\n",
+      "2006 2\n",
+      "2006 3\n",
+      "2006 4\n",
+      "2006 5\n",
+      "2006 6\n",
+      "2006 7\n",
+      "2006 8\n",
+      "2006 9\n",
+      "2006 10\n",
+      "2006 11\n",
+      "2006 12\n",
+      "2007 1\n",
+      "2007 2\n",
+      "2007 3\n",
+      "2007 4\n",
+      "2007 5\n",
+      "2007 6\n",
+      "2007 7\n",
+      "2007 8\n",
+      "2007 9\n",
+      "2007 10\n",
+      "2007 11\n",
+      "2007 12\n",
+      "2008 1\n"
      ]
     }
    ],
    "source": [
-    "for month in range(12,13):\n",
-    "    print(month)\n",
-    "    litho, bio = create_particle_fields(2014, month, max_bio=2.54467e-4, max_litho=1.83314e-7, save=True, beta=0.00)"
+    "for year in range(2002, 2010):\n",
+    "    for month in range(1,13):\n",
+    "        print(year, month)\n",
+    "        litho, bio = create_particle_fields(year, month, max_bio=2.54467e-4, max_litho=1.83314e-7, save=True, beta=0.00)"
    ]
   },
   {
